--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tsparticles/vue3": "^3.0.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.7.2",
+    "particles.vue3": "^2.12.0",
+    "tsparticles": "^3.3.0",
+    "tsparticles-slim": "^2.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
